[gd_scene load_steps=15 format=3 uid="uid://cqwsbbv6kkdsy"]

[ext_resource type="Script" uid="uid://dccodus6vyhh3" path="res://scenes/component/meta_upgrade_card.gd" id="1_mbqxd"]
[ext_resource type="PackedScene" uid="uid://berykcpudlkdw" path="res://scenes/component/random_audio_stream_player_component.tscn" id="2_0dvh4"]
[ext_resource type="AudioStream" uid="uid://c6iel3dtcrnxu" path="res://sounds/switch1.ogg" id="3_3cbax"]
[ext_resource type="AudioStream" uid="uid://b6vfxq753kt3n" path="res://sounds/switch2.ogg" id="4_0y2g8"]
[ext_resource type="AudioStream" uid="uid://b1j3fcqkfpnpn" path="res://sounds/switch3.ogg" id="5_a3nws"]
[ext_resource type="AudioStream" uid="uid://doaxmkjl6wjc0" path="res://sounds/switch4.ogg" id="6_ygagn"]
[ext_resource type="AudioStream" uid="uid://0h2wwkc1y1w1" path="res://sounds/switch5.ogg" id="7_xmevb"]
[ext_resource type="AudioStream" uid="uid://c7smwq37jsbyj" path="res://sounds/switch6.ogg" id="8_lm2ly"]
[ext_resource type="AudioStream" uid="uid://cbrxq4hv415wt" path="res://sounds/switch7.ogg" id="9_cg68r"]
[ext_resource type="AudioStream" uid="uid://bpfarkuqxb5ll" path="res://sounds/switch8.ogg" id="10_ah3og"]
[ext_resource type="AudioStream" uid="uid://b50puob23ic7y" path="res://sounds/switch9.ogg" id="11_0wt8y"]
[ext_resource type="AudioStream" uid="uid://0bn0s0f1amj8" path="res://sounds/switch10.ogg" id="12_pmevt"]
[ext_resource type="Texture2D" uid="uid://bu7t87i6678l3" path="res://scenes/game_object/experience_vial/experience_vial.png" id="13_rkune"]
[ext_resource type="PackedScene" uid="uid://can05764pxj5s" path="res://scenes/ui/sound_button.tscn" id="13_srxni"]

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(170, 2.08165e-12)
offset_right = 180.0
offset_bottom = 165.0
pivot_offset = Vector2(60, 80)
size_flags_vertical = 0
script = ExtResource("1_mbqxd")

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_0dvh4")]
streams = Array[AudioStream]([ExtResource("3_3cbax"), ExtResource("4_0y2g8"), ExtResource("5_a3nws"), ExtResource("6_ygagn"), ExtResource("7_xmevb"), ExtResource("8_lm2ly"), ExtResource("9_cg68r"), ExtResource("10_ah3og"), ExtResource("11_0wt8y"), ExtResource("12_pmevt")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="PanelLabel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelLabel"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 1
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 24
text = "Test Title"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 1
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 16
text = "Test Description"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "0/123"
horizontal_alignment = 1
vertical_alignment = 2

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "x0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
max_value = 1.0
value = 0.5
show_percentage = false

[node name="VialImageControl" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="VialImage" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/VialImageControl"]
layout_mode = 2
offset_left = -5.81893
offset_top = -15.0
offset_right = 10.1811
offset_bottom = 1.0
mouse_filter = 2
texture = ExtResource("13_rkune")
stretch_mode = 4

[node name="LearnButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("13_srxni")]
unique_name_in_owner = true
layout_mode = 2
text = "Learn"
